--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
 .body{
     font-family: 'Open Sans', sans-serif;
 }
+.banner-container{
+    background-color: #747e85;
+}
+.banner-column{
+    background-color: #546f83;
+}
+.text-first{
+    font-family: 'Young Serif', serif;
+    color: azure;
+}
+.text-second{
+    font-family: 'Young Serif', serif;
+    color: azure;
+}
+.navbar-container{
+    background-color: rgb(37, 34, 34);
+}
+.nav-link{
+    color: rgb(150, 214, 214);
+}
