--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,10 @@
     background-color: #747e85;
 }
 .navbar-container{
+    top: 0;
     background-color: rgb(37, 34, 34);
+    position: sticky;
+    z-index: 2;
 }
 .banner-column{
     background-color: #546f83;
@@ -26,6 +29,9 @@
 }
 .education-container{
     background-color: #e9e0e0;
+}
+.project-container{
+    background-color:  #2BB3DD;
 }
 /* education round cirle will be red*/
 .bg-redtype{
