--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,9 @@
 .project-container{
     background-color:  #2BB3DD;
 }
+.portfolio-container{
+    background-color: cadetblue;
+}
 /* education round cirle will be red*/
 .bg-redtype{
     background-color: #FB8578;
@@ -47,4 +50,7 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
+}
+.form-container{
+    background-color: #474D5D;
 }
