--- a/css/style.css
+++ b/css/style.css
@@ -9,27 +9,48 @@
     background-color: #262B37;
     position: sticky;
     z-index: 1;
-    
 }
 .banner-column{
+    border-radius: 15px;
+    padding: 5px;
     background-color: #546f83;
+    /* border-style: outset; */
+    /* border-style: inset; */
+    border-style: groove;
+    /* border-width: 5px; */
+    border-width: 5px 10px 10px 10px;
+    border-color: rgb(24, 15, 15) rgb(27, 168, 168) rgb(170, 159, 152) rgb(27, 168, 168)
 }
 .text-first{
     font-family: 'Young Serif', serif;
-    color: azure;
+    color: aliceblue;
+    /* text-shadow: 0 0 5px #fc0909; */
+    text-shadow: 0 0 5px #FF0000, 0 0 5px #111129;
 }
 .text-second{
     font-family: 'Young Serif', serif;
     color: azure;
+    text-shadow: 0 0 5px #0ce46d, 0 0 5px #020225;
+    /* text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue; */
 }
 .nav-link{
     color: rgb(150, 214, 214);
+    /* font-size: 25px; */
 }
 .about-container{
-    background-color: #747e85;
+    /* background-color: #747e85; */
+    background-color: rgb(105, 112, 175);
 }
+.col-md-3.mb-5.mt-3 img {
+    border: 5px solid black;
+    border-radius: 15px;
+    /* border-style: inset; */
+    border-style: groove;
+    border-color: hsl(0, 0%, 73%);
+  }
+  
 .education-container{
-    background-color: #e9e0e0;
+    background-color: #493b3b;
 }
 .project-container{
     background-color:  #2BB3DD;
@@ -40,9 +61,17 @@
 /* education round cirle will be red*/
 .bg-redtype{
     background-color: #FB8578;
+    fo
 }
 .bg-redtype:hover{
     color: black!important;
+}
+.rededutype-color{
+    color: #dcdce4;
+    font-size: 32px;
+    font-weight: lighter;
+    font-family: 'Young Serif', serif;
+    text-shadow: 0 0 5px #08e42c, 0 0 5px #0d2b07;
 }
 /* education text will be red*/
 .redtype-color{
@@ -50,10 +79,13 @@
 }
 /* education round all will be affect*/
 .circle-edu{
-    background-color: #FB8578;
+    /* background-color: #FB8578; */
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    border: 3px solid #000;
+    box-shadow: 0 0 15px rgba(243, 227, 227, 0.932);
+    background-image: linear-gradient(to bottom, #17246b, #25b3a7);
 }
 .form-container{
     background-color: #474D5D;
