--- a/css/style.css
+++ b/css/style.css
@@ -47,31 +47,63 @@
     /* border-style: inset; */
     border-style: groove;
     border-color: hsl(0, 0%, 73%);
-  }
+}
   
 .education-container{
     background-color: #493b3b;
 }
 .project-container{
-    background-color:  #2BB3DD;
+    /* background-color:  #2BB3DD; */
+    background-color: #38444D;
 }
-.portfolio-container{
-    background-color: cadetblue;
+.certificate-container{
+    background-color: #493b3b;
 }
 /* education round cirle will be red*/
 .bg-redtype{
     background-color: #FB8578;
-    fo
 }
 .bg-redtype:hover{
     color: black!important;
 }
+/* this is EDUCATION text colour */
 .rededutype-color{
     color: #dcdce4;
     font-size: 32px;
     font-weight: lighter;
     font-family: 'Young Serif', serif;
     text-shadow: 0 0 5px #08e42c, 0 0 5px #0d2b07;
+}
+/* this is PROJECT text colour */
+.redprotype-color{
+    color: #dcdce4;
+    font-size: 32px;
+    font-weight: lighter;
+    font-family: 'Young Serif', serif;
+    text-shadow: 0 0 8px #08e42c, 0 0 5px #0d2b07;
+}
+/* this is CERTIFICATE text colour */
+.redcertype-color{
+    color: #dcdce4;
+    font-size: 32px;
+    font-weight: lighter;
+    font-family: 'Young Serif', serif;
+    text-shadow: 0 0 8px #08e42c, 0 0 5px #0d2b07;
+}
+.allproject-image{
+    margin: 5px;
+    border: 1px solid #ccc;
+}
+.allproject-image:hover{
+    border: 1px solid #221d1d;
+}
+.allproject-image img{
+    width: 100%;
+    height: auto;
+}
+.description{
+    padding: 15px;
+    text-align: center;
 }
 /* education text will be red*/
 .redtype-color{
@@ -86,7 +118,18 @@
     border: 3px solid #000;
     box-shadow: 0 0 15px rgba(243, 227, 227, 0.932);
     background-image: linear-gradient(to bottom, #17246b, #25b3a7);
+    /* background-image: repeating-linear-gradient(45deg, transparent 5px, #fff 5px, #fff 10px, transparent 10px); */
 }
+.card-body{
+    border-left: 3px solid rgb(245, 77, 11);
+    box-shadow: 0 0 5px rgba(9, 245, 9, 0.5);
+    border-bottom: 6px solid #262B37;
+    /* background-color: lightgrey; */
+    background-image: linear-gradient(to bottom, #f0f1f5, #2e9c3d);
+    /* background-image: linear-gradient(to top, #FB8578, #F77871); */
+}
+  
+
 .form-container{
     background-color: #474D5D;
 }
