--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .body{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif 'Font Awesome';
 }
 .banner-container{
     background-color: #747e85;
@@ -52,6 +52,11 @@
 .education-container{
     background-color: #493b3b;
 }
+.skills-container{
+    background-color: #3f2f32d7;
+    /* background-color: #0D3043; */
+    /* background-color: #0C242E; */
+}
 .project-container{
     /* background-color:  #2BB3DD; */
     background-color: #38444D;
@@ -74,6 +79,15 @@
     font-family: 'Young Serif', serif;
     text-shadow: 0 0 5px #08e42c, 0 0 5px #0d2b07;
 }
+/* this is SKILLS text colour */
+.redskitype-color{
+    color: #dcdce4;
+    font-size: 32px;
+    font-weight: lighter;
+    font-family: 'Young Serif', serif;
+    text-shadow: 0 0 5px #08e42c, 0 0 5px #0d2b07;
+}
+
 /* this is PROJECT text colour */
 .redprotype-color{
     color: #dcdce4;
@@ -87,7 +101,7 @@
     color: #dcdce4;
     font-size: 32px;
     font-weight: lighter;
-    font-family: 'Young Serif', serif;
+    font-family: 'Young Serif', serif, 'Font Awesome';
     text-shadow: 0 0 8px #08e42c, 0 0 5px #0d2b07;
 }
 .allproject-image{
@@ -119,7 +133,46 @@
     box-shadow: 0 0 15px rgba(243, 227, 227, 0.932);
     background-image: linear-gradient(to bottom, #17246b, #25b3a7);
     /* background-image: repeating-linear-gradient(45deg, transparent 5px, #fff 5px, #fff 10px, transparent 10px); */
+    animation: fade 3s infinite;
 }
+/* Add this keyframes animation for the circle */
+@keyframes fade {
+    0% {
+        opacity: 1;
+    }
+    15% {
+        opacity: 0.2;
+    }
+    30% {
+        opacity: 0.4;
+    }
+    50% {
+        opacity: 0.6;
+    }
+    70% {
+        opacity: 0.7;
+    }
+    85% {
+        opacity: 0.9;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+/* @keyframes scale {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+} */
+
+
 .card-body{
     border-left: 3px solid rgb(245, 77, 11);
     box-shadow: 0 0 5px rgba(9, 245, 9, 0.5);
@@ -151,4 +204,119 @@
 }
 .circleIcon:hover{
     background-color: black;
+}
+
+/* this is ALL Skills section work */
+
+/* .body-skill { */
+    /* font-family: Arial, sans-serif; */
+    /* background-color: #584747; */
+    /* height: 100vh; */
+
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 36px;
+    color: #333;
+    padding: 20px;
+}
+
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.column {
+    flex: 1;
+    background-color: #fff;
+    border: 2px solid #6961af62;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); */
+    transition: background-color 0.7s;
+    /* Added transition for background color */
+    box-shadow: 0 0 10px #da0f08e8;
+    border-bottom: 6px solid #6a9b0fe8;
+    /* background-image: linear-gradient(to top, #f0f1f5, #2e9c3d); */
+
+}
+
+.column h2 {
+    font-size: 24px;
+    color: #333;
+}
+
+.skills-list {
+    list-style: none;
+    padding: 0;
+}
+
+.skills-list li {
+    margin-bottom: 10px;
+}
+
+.column:hover {
+    background-color: #c7a6a6;
+    /* Change background color on hover */
+    box-shadow: 0 0 10px rgba(15, 88, 223, 0.9);
+    /* Change box-shadow color on hover */
+}
+
+/* .body-all { */
+    /* font-family: Arial, sans-serif;
+    background-color: #574242; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    /* height: 100vh; */
+    /* margin: 0; */
+
+
+.slider-container {
+    /* width: 500px; */
+    max-width: 70%;
+    overflow: hidden;
+    margin: 0 auto; /* Center horizontally */
+    display: flex;
+    justify-content: center; /* Center vertically */
+    align-items: center;
+}
+
+.slider {
+    display: flex;
+    animation: slide 9s linear infinite;
+    white-space: nowrap; /* Prevent slider items from wrapping */
+}
+
+.slide {
+    border: 1px solid black;
+    width: 100px;
+    height: 100px;
+    border-radius: 15px;
+    text-align: center;
+    background-color: #3498db;
+    margin: 10px;
+    display: flex;
+    justify-content: center; /* Center text horizontally */
+    align-items: center; /* Center text vertically */
+    color: #fff;
+}
+
+@keyframes slide {
+    0% {
+        transform: translateX(300px);
+    }
+
+    100% {
+        transform: translateX(-300px);
+    }
+
 }
