--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,14 @@
     /* background-color: #747e85; */
     background-color: rgb(105, 112, 175);
 }
+
+/* this button will apply about button */
+/* .aboutbutton{
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan;
+}
+.aboutbutton:hover{
+    box-shadow: 0 0 5px cyan, 0 0 25px, cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
+} */
 .col-md-3.mb-5.mt-3 img {
     border: 5px solid black;
     border-radius: 15px;
